refactor: Use Set.of() and add versioning properties to protected set
- Change from Collections.unmodifiableSet(new HashSet<>(Arrays.asList(...)))
  to Set.of(...) for cleaner, more concise syntax (Java 9+)
- Add versioning properties to protected set:
  * cmis:versionSeriesId
  * cmis:versionLabel
  * cmis:isLatestVersion
  * cmis:checkinComment
- Remove unused imports (Arrays, Collections, HashSet)

Total: 120 tests passing
Co-Authored-By: Akinori Ishii <yumioka> <akinori@sanwa-c.com>